fix(material-experimental/theming): align M3 icon buttons with spec
Fixes the following issues with the M3 icon buttons:
* They didn't have the right size. In M3 icon buttons are a bit smaller.
* The disabled color opacity wasn't being applied.
* The button didn't have the right color.

--- a/src/material-experimental/theming/_m3-density.scss
+++ b/src/material-experimental/theming/_m3-density.scss
@@ -41,7 +41,7 @@ $_density-tokens: (
     container-height: (40px, 36px, 32px, 28px),
   ),
   (mdc, icon-button): (
-    state-layer-size: (48px, 44px, 40px, 36px, 32px, 28px),
+    state-layer-size: (40px, 36px, 32px, 28px, 24px, 20px),
   ),
   (mdc, linear-progress): (),
   (mdc, list): (
